tests/fixtures/invalid/min_list_str.py
# Cannot call min() with List[int], Str
x = min([1, 2, 3], "hello")
